<resources>
    <string name="app_name">My Application</string>
    <string name="username_email">Username/Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="login_portal">Login Portal</string>
    <string name="logout">Logout</string>
</resources>